<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/track_names"
        android:layout_width="0sp"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        android:textSize="20dp"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:gravity="center_vertical" />

</LinearLayout>
