...
        android:layout_marginLeft="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Playlist" />

    <Button
        android:id = "@+id/back"
        android:layout_marginTop = "15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "BACK"/>

    <Button
...
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id = "@+id/title"
        android:layout_marginTop = "20dp"
        android:layout_centerHorizontal="true"
        android:textSize = "30sp"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:layout_below="@id/back"
...
        android:layout_marginTop = "40dp"
        android:scaleType="fitXY"
        android:layout_marginLeft = "30dp"
        android:background="@drawable/previous" />

    <ImageButton
        android:id = "@+id/play_pause_button"
        android:layout_toRightOf="@id/prevButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below = "@id/username"
        android:layout_marginTop = "40dp"
        android:layout_marginLeft = "60dp"
...
